examples/kju/positive/arythmetic/unary_operators_with_variables.kju


fun kju():Unit{
	var a:Int=5;
	var x:Int=+a;
	var y:Int=-a;
}