examples/kju/negative/adding_bool.kju
fun kju():Unit{
	var a:Bool=true;
	var x:Int = 5 + a;
	var y:Int = 5 + false;
	var y:Int = 5 + true;
}